adds method to implement inventory interaction in external service
