# externalservice/gen/externalservice/endpoints.go
@@ -15,20 +15,26 @@ import (
 
 // Endpoints wraps the "externalservice" service endpoints.
 type Endpoints struct {
-	CreateCharacter goa.Endpoint
-	GetCharacter    goa.Endpoint
-	UpdateCharacter goa.Endpoint
-	DeleteCharacter goa.Endpoint
+	CreateCharacter         goa.Endpoint
+	GetCharacter            goa.Endpoint
+	UpdateCharacter         goa.Endpoint
+	DeleteCharacter         goa.Endpoint
+	GetInventory            goa.Endpoint
+	AddItemToInventory      goa.Endpoint
+	RemoveItemFromInventory goa.Endpoint
 }
 
 // NewEndpoints wraps the methods of the "externalservice" service with
 // endpoints.
 func NewEndpoints(s Service) *Endpoints {
 	return &Endpoints{
-		CreateCharacter: NewCreateCharacterEndpoint(s),
-		GetCharacter:    NewGetCharacterEndpoint(s),
-		UpdateCharacter: NewUpdateCharacterEndpoint(s),
-		DeleteCharacter: NewDeleteCharacterEndpoint(s),
+		CreateCharacter:         NewCreateCharacterEndpoint(s),
+		GetCharacter:            NewGetCharacterEndpoint(s),
+		UpdateCharacter:         NewUpdateCharacterEndpoint(s),
+		DeleteCharacter:         NewDeleteCharacterEndpoint(s),
+		GetInventory:            NewGetInventoryEndpoint(s),
+		AddItemToInventory:      NewAddItemToInventoryEndpoint(s),
+		RemoveItemFromInventory: NewRemoveItemFromInventoryEndpoint(s),
 	}
 }
 
@@ -39,6 +45,9 @@ func (e *Endpoints) Use(m func(goa.Endpoint) goa.Endpoint) {
 	e.GetCharacter = m(e.GetCharacter)
 	e.UpdateCharacter = m(e.UpdateCharacter)
 	e.DeleteCharacter = m(e.DeleteCharacter)
+	e.GetInventory = m(e.GetInventory)
+	e.AddItemToInventory = m(e.AddItemToInventory)
+	e.RemoveItemFromInventory = m(e.RemoveItemFromInventory)
 }
 
 // NewCreateCharacterEndpoint returns an endpoint function that calls the
@@ -74,5 +83,32 @@ func NewDeleteCharacterEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req any) (any, error) {
 		p := req.(*DeleteCharacterPayload)
 		return nil, s.DeleteCharacter(ctx, p)
+	}
+}
+
+// NewGetInventoryEndpoint returns an endpoint function that calls the method
+// "get_inventory" of service "externalservice".
+func NewGetInventoryEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*GetInventoryPayload)
+		return s.GetInventory(ctx, p)
+	}
+}
+
+// NewAddItemToInventoryEndpoint returns an endpoint function that calls the
+// method "add_item_to_inventory" of service "externalservice".
+func NewAddItemToInventoryEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*AddItemToInventoryPayload)
+		return nil, s.AddItemToInventory(ctx, p)
+	}
+}
+
+// NewRemoveItemFromInventoryEndpoint returns an endpoint function that calls
+// the method "remove_item_from_inventory" of service "externalservice".
+func NewRemoveItemFromInventoryEndpoint(s Service) goa.Endpoint {
+	return func(ctx context.Context, req any) (any, error) {
+		p := req.(*RemoveItemFromInventoryPayload)
+		return nil, s.RemoveItemFromInventory(ctx, p)
 	}
 }
